--- a/Frontend/SMSClassification/package.json
+++ b/Frontend/SMSClassification/package.json
@@ -14,7 +14,8 @@
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-query": "^3.39.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
